Backed Numpy version to < 2.0
Pyomo is not yet compatible with Numpy 2.0, so reverted back to 1.26 for now.

--- a/requirements.in
+++ b/requirements.in
@@ -8,7 +8,7 @@ pyomo
 ipython
 matplotlib
 pandas
-numpy
+numpy < 2.0
 joblib
 salib
 pydoe
@@ -41,3 +41,4 @@ networkx
 gravis
 highspy
 scipy
+gurobipy
