adding temoa_alpha to CI monitoring

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
     push:
-      branches: [ "main" ]
+      branches: [ "main",  "temoa_alpha" ]
     pull_request:
-      branches: [ "main" ]
+      branches: [ "main", "temoa_alpha" ]
 
 jobs:
   test:
