--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,6 @@ dependencies = [
     "seaborn>=0.13.2",
     "tabulate>=0.9.0",
     "xlsxwriter>=3.2.0",
-    "plotly>=5.24.0",
     "pyam-iamc>=2.2.4",
     "pytest>=8.3.2",
     "deprecated>=1.2.14",
@@ -36,6 +35,7 @@ dependencies = [
     "scipy>=1.14.1",
     "gurobipy>=11.0.3",
     "pytest-cov>=6.0.0",
+    "nx-vis-visualizer>=0.1.1",
 ]
 
 [project.optional-dependencies]
